--- a/package.json
+++ b/package.json
@@ -20,10 +20,12 @@
     "@xenova/transformers": "^2.17.2",
     "body-parser": "^2.2.0",
     "cors": "^2.8.5",
+    "d3-dsv": "^2.0.0",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "langchain": "^1.0.1",
     "multer": "^2.0.2",
-    "pdf-parse": "^1.1.1"
+    "pdf-parse": "^1.1.1",
+    "playwright": "^1.56.1"
   }
 }
