--- a/package.json
+++ b/package.json
@@ -18,7 +18,10 @@
     "@langchain/openai": "^1.0.0",
     "@langchain/textsplitters": "^1.0.0",
     "@xenova/transformers": "^2.17.2",
+    "@zilliz/milvus2-sdk-node": "^2.6.1",
+    "axios": "^1.12.2",
     "body-parser": "^2.2.0",
+    "cheerio": "^1.1.2",
     "cors": "^2.8.5",
     "d3-dsv": "^2.0.0",
     "dotenv": "^17.2.3",
